# AFAN

./: CMakeLists.txt  README.md
sample_networks/: 3D_real_seg.nwt  3D_synthetic.nwt
source/flow2/: main.cu
source/flow3/: flow.h  main.cu
